--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "author": "Thananjaya Chakravarthy S",
   "license": "ISC",
   "dependencies": {
-    "brainjs": "^0.7.4"
+    "brain.js": "^2.0.0-alpha.9"
   }
 }
